title shows rooms name

--- a/pages/index.html
+++ b/pages/index.html
@@ -113,7 +113,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">Charades</a>
+        <a class="navbar-brand" href="/" id="room_name">Charades</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -238,6 +238,12 @@
                 players.appendChild(item);
             }
         });
+
+        socket.on('room_name',function(room_name){
+            var title = document.getElementById('room_name');
+            title.innerHTML = room_name;
+
+        })
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
